--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Rock.Paper.Scissors</title>
+  <title>Reverse Countdown</title>
   <link rel="stylesheet" href="styles.css">
   <script src="script.js" defer></script>
 </head>
